--- a/mta.yaml
+++ b/mta.yaml
@@ -2,3 +2,16 @@ ID: mta_minreq
 _schema-version: '2.0'
 description: Startup.Focus Minimum Requirement Example
 version: 0.0.1
+
+modules:
+ - name: db
+   type: hdb
+   path: db
+   requires:
+    - name: hdi_db
+
+resources:
+ - name: hdi_db
+   properties:
+      hdi-container-name: ${service-name}
+   type: com.sap.xs.hdi-container
