--- a/web/xs-app.json
+++ b/web/xs-app.json
@@ -1,5 +1,12 @@
 {
 	"welcomeFile": "index.html",
-	"authenticationMethod": "none",
-	"routes": []
+	"authenticationMethod": "route",
+	"routes": 
+		[
+			{
+				"localDir": "resources",
+				"source": "^/(.*)", 
+				"authenticationType": "xsuaa"
+			}
+		]
 }
