--- a/js/package.json
+++ b/js/package.json
@@ -1,15 +1,21 @@
 {
-  "dependencies": {},
-  "description": "NodeJS Module",
-  "devDependencies": {},
-  "files": [],
-  "main": "server.js",
-  "name": "js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": "6.x"
-  },
-  "version": "1.0.0"
+	"dependencies": {
+		"express": "^4.15.3",
+		"@sap/xsenv": "^1.2.8",
+		"@sap/hdbext": "^4.4.3",
+		"@sap/xssec": "^2.1.1",
+		"passport": "^0.3.2"
+	},
+	"description": "NodeJS Module",
+	"devDependencies": {},
+	"files": [],
+	"main": "server.js",
+	"name": "js",
+	"scripts": {
+		"start": "node server.js"
+	},
+	"engines": {
+		"node": "6.x"
+	},
+	"version": "1.0.0"
 }
