--- a/js/package.json
+++ b/js/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"express": "^4.15.3",
 		"@sap/xsenv": "^1.2.8",
+		"@sap/logging": "^3.1.0",
 		"@sap/hdbext": "^4.4.3",
 		"@sap/xssec": "^2.1.1",
 		"passport": "^0.3.2"
