prep for cf and a-team shared

--- a/web/xs-app.json
+++ b/web/xs-app.json
@@ -27,8 +27,7 @@
 			{
 				"localDir": "resources",
 				"source": "^/(.*)", 
-				"authenticationType": "xsuaa",
-				"scope" : "$XSAPPNAME.view"
+				"authenticationType": "none"
 			}
 		]
 }
